Introduced .atk-popover component.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -444,7 +444,7 @@ ul[class*=atk-menu] {
             .colorCheck(@@color);
             background: lighten(@@color, 5%);
         }
-        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th& { 
+        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th&, >.atk-popover-arrow:before { 
             .colorCheck(@@color);
             background: @@color;
             border-color: @@color;
