--- a/playground/css/playground.less
+++ b/playground/css/playground.less
@@ -49,3 +49,7 @@ section {
 		height: 100px;
 	}
 }
+
+#example-widgets-popover .row>.span_4>.atk-box>*[class*=atk-popover] {
+	position: relative;
+}
