--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -50,7 +50,7 @@ section#widgets
             h4 Bananas
             p.atk-push-small
               | Curabitur posuere vehicula scelerisque. Quisque vitae velit ante. Sed vel euismod est. Sed eu libero quis justo aliquet condimentum. Maecenas dictum, tortor vehicula.
-            .atk-actions-large
+            .atk-actions
               a(href='javascript:void(0)')
                 span.icon-down-circled-1
                 | &nbsp;Download
@@ -574,3 +574,40 @@ section#widgets
               a.atk-label.atk-swatch-yellow(href='javascript:void(0)') Upgrade
               span.atk-sep ⋅
               a(href='javascript:void(0)') Help
+  // [Widget] Popovers          
+  h3 Popovers
+  p
+    span.atk-label.atk-effect-info .atk-popover
+  #example-widgets-popover
+    .atk-push.row
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-top-left.atk-box.atk-align-center.atk-size-mega
+            | .atk-popover-top-left
+            .atk-popover-arrow
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-top-center.atk-box.atk-align-center.atk-size-mega.atk-swatch-blue
+            | .atk-popover-top-center
+            .atk-popover-arrow
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-mega.atk-swatch-ink
+            | .atk-popover-top-right
+            .atk-popover-arrow
+    .row
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-mega.atk-swatch-yellow
+            | .atk-popover-bottom-left
+            .atk-popover-arrow
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-bottom-center.atk-box.atk-align-center.atk-size-mega.atk-swatch-red
+            | .atk-popover-bottom-center
+            .atk-popover-arrow
+      .span_4.col
+        .atk-box
+          .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-mega.atk-swatch-green
+            | .atk-popover-bottom-right
+            .atk-popover-arrow
