--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -56,4 +56,5 @@ html(class='no-js')
 									| &nbsp;Sign in with Twitter
 							.atk-align-center
 								a.atk-text-dimmed(href='#') Don't have an acccount?
+							| test
 
