Added meta tag to form login example.

--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -9,6 +9,7 @@ html(class='no-js')
 		meta(charset='utf-8')
 		<!--[if IE]><!-->
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name="viewport",content="width=device-width, initial-scale=1")
 		<!--[endif]-->
 		title Agile Toolkit CSS
 		meta(name='description', content='')
@@ -56,5 +57,4 @@ html(class='no-js')
 									| &nbsp;Sign in with Twitter
 							.atk-align-center
 								a.atk-text-dimmed(href='#') Don't have an acccount?
-							| test
 
