Finalising form login example for mobile.

--- a/playground/examples/form-login.jade
+++ b/playground/examples/form-login.jade
@@ -21,7 +21,7 @@ html(class='no-js')
 			.atk-layout-row.atk-layout-fluid
 				.atk-layout.atk-layout-cell
 					.atk-layout-column.atk-layout-fluid.atk-valign-middle
-						.atk-wrapper
+						.atk-wrapper.atk-padding-small
 							.atk-box
 								.atk-push.atk-align-center
 									a.atk-text-reset(href='javascript:void(0)')
