Fixed <code> style to look a little more decent.

--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -145,13 +145,14 @@ del {
     color: red;
 }
 code, kbd, pre, samp {
-    border-top: 1px solid @borderStatic;
-    border-bottom: 1px solid @borderStatic;
+// by romans. Can't stand this any longer.
+//    border-top: 1px solid @borderStatic;
+//    border-bottom: 1px solid @borderStatic;
     cursor: text;
-    display: block;
+//    display: block;
     line-height: @bodyBaseline;
-    margin: 0 0 @margin;
-    padding: @margin;
+//    margin: 0 0 @margin;
+//    padding: @margin;
 }
 pre {
     font-family: monospace, serif;
