--- a/playground/layouts/centered.jade
+++ b/playground/layouts/centered.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 <!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
 <!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
 <!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
