--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -582,32 +582,32 @@ section#widgets
     .atk-push.row
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-top-left.atk-box.atk-align-center.atk-size-mega
+          .atk-popover.atk-popover-top-left.atk-box.atk-align-center.atk-size-kilo
             | .atk-popover-top-left
             .atk-popover-arrow
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-top-center.atk-box.atk-align-center.atk-size-mega.atk-swatch-blue
+          .atk-popover.atk-popover-top-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-blue
             | .atk-popover-top-center
             .atk-popover-arrow
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-mega.atk-swatch-ink
+          .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-ink
             | .atk-popover-top-right
             .atk-popover-arrow
     .row
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-mega.atk-swatch-yellow
+          .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-kilo.atk-swatch-yellow
             | .atk-popover-bottom-left
             .atk-popover-arrow
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-bottom-center.atk-box.atk-align-center.atk-size-mega.atk-swatch-red
+          .atk-popover.atk-popover-bottom-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-red
             | .atk-popover-bottom-center
             .atk-popover-arrow
       .span_4.col
         .atk-box
-          .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-mega.atk-swatch-green
+          .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-green
             | .atk-popover-bottom-right
             .atk-popover-arrow
