--- a/playground/css/style-example-login.css
+++ b/playground/css/style-example-login.css
@@ -5728,17 +5728,35 @@ a:hover.atk-text-dimmed {
   display: table-cell;
   vertical-align: middle;
 }
-.atk-cells.atk-cells-gutter-large > .atk-cell + .atk-cell {
-  padding-left: 2em;
-}
-.atk-cells.atk-cells-gutter > .atk-cell + .atk-cell {
-  padding-left: 1em;
-}
-.atk-cells.atk-cells-gutter-small > .atk-cell + .atk-cell {
-  padding-left: 0.5em;
-}
 .atk-cells.atk-cells-justified {
   table-layout: fixed;
+}
+.atk-cells-group {
+  display: table;
+}
+.atk-cells-group > .atk-cells {
+  display: table-row;
+}
+.atk-cells-table {
+  display: table;
+}
+.atk-cells-table .atk-cells-group {
+  display: table-row-group;
+}
+.atk-cells-table > .atk-cells {
+  display: table-row;
+}
+*[class*=atk-cells-gutter].atk-cells.atk-cells-gutter-large > .atk-cell + .atk-cell,
+*[class*=atk-cells-gutter].atk-cells-group.atk-cells-gutter-large > .atk-cells > .atk-cell + .atk-cell {
+  padding-left: 2em;
+}
+*[class*=atk-cells-gutter].atk-cells.atk-cells-gutter > .atk-cell + .atk-cell,
+*[class*=atk-cells-gutter].atk-cells-group.atk-cells-gutter > .atk-cells > .atk-cell + .atk-cell {
+  padding-left: 1em;
+}
+*[class*=atk-cells-gutter].atk-cells.atk-cells-gutter-small > .atk-cell + .atk-cell,
+*[class*=atk-cells-gutter].atk-cells-group.atk-cells-gutter-small > .atk-cells > .atk-cell + .atk-cell {
+  padding-left: 0.5em;
 }
 a[class*='atk-button'],
 button[class*='atk-button'],
@@ -6070,26 +6088,35 @@ ul[class*=atk-menu].atk-menu-vertical > li *[class*=atk-menu] {
 .atk-valign-bottom {
   vertical-align: bottom !important;
 }
-.atk-push-small {
+*[class*=atk-push].atk-push-small {
   margin-bottom: 0.8rem;
 }
-.atk-push-small:last-child {
+*[class*=atk-push].atk-push-small:last-child {
   margin-bottom: 0;
 }
-.atk-push {
+*[class*=atk-push].atk-push {
   margin-bottom: 1.6rem;
 }
-.atk-push:last-child {
+*[class*=atk-push].atk-push:last-child {
   margin-bottom: 0;
 }
-.atk-push-large {
+*[class*=atk-push].atk-push-large {
   margin-bottom: 3.2rem;
 }
-.atk-push-large:last-child {
+*[class*=atk-push].atk-push-large:last-child {
   margin-bottom: 0;
 }
-.atk-push-reset {
+*[class*=atk-push].atk-push-reset {
   margin-bottom: 0;
+}
+.atk-cells-group > *[class*=atk-push].atk-push-small > .atk-cell {
+  padding-bottom: 0.8rem;
+}
+.atk-cells-group > *[class*=atk-push].atk-push > .atk-cell {
+  padding-bottom: 1.6rem;
+}
+.atk-cells-group > *[class*=atk-push].atk-push-large > .atk-cell {
+  padding-bottom: 3.2rem;
 }
 *[class*=atk-padding],
 .ui-tabs *[class*=atk-padding].ui-tabs-panel.ui-widget-content {
