Experimenting with the new forms.

--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -58,9 +58,13 @@ textarea:focus {
     .box-shadow(@shadow);
     outline: none;
 }
-label em {
-    font-style: normal;
-    font-weight: normal;
+label.atk-input-label {
+    display: inline-block;
+    margin: 0.5em 0;
+    em {
+        font-style: normal;
+        font-weight: normal;
+    }
 }
 
 
