--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -321,15 +321,19 @@ ul[class*=atk-menu] {
     text-align: center;
 }
 
+.atk-cells-group.atk-valign-top>.atk-cells>.atk-cell,
 .atk-valign-top {
     vertical-align: top !important;
 }
+.atk-cells-group.atk-valign-middle>.atk-cells>.atk-cell,
 .atk-valign-middle {
     vertical-align: middle !important;
 }
+.atk-cells-group.atk-valign-baseline>.atk-cells>.atk-cell,
 .atk-valign-baseline {
     vertical-align: baseline !important;
 }
+.atk-cells-group.atk-valign-bottom>.atk-cells>.atk-cell,
 .atk-valign-bottom {
     vertical-align: bottom !important;
 }
